# AdventOfCode

./: .gitignore  day10.cpp  day15.cpp  day20.py  day21.py  day22.py  day5.cpp  helper.h  main.cpp  round1.cpp  round2.cpp  testfile  thingsToDo
2015/day1/: Cargo.toml  main.rs
2015/day10/: main.rs
2015/day11/: main.rs
2015/day12/: main.py
2015/day13/: main.rs
2015/day14/: main.rs
2015/day15/: main.rs
2015/day16/: main.rs
2015/day17/: main.rs
2015/day18/: main.rs
2015/day19/: main.rs
2015/day2/: main.rs
2015/day20/: main.rs
2015/day21/: main.rs
2015/day22/: main.py  main.rs
2015/day23/: main.rs
2015/day24/: main.rs
2015/day25/: main.py
2015/day3/: main.rs
2015/day4/: Cargo.toml  main.rs
2015/day5/: main.rs  note
2015/day6/: main.rs
2015/day7/: main.rs
2015/day8/: main.rs
2015/day9/: main.rs
2016/: day01.py  day02.py  day03.py  day04.py  day05.py
2016/finished/: day01.py  day02.py  day03.py  day04.py  day05.py
2016/input/: test
2016/python/: day11.py
2017/: Makefile  main.cpp
2017/finished/: day11.cpp  day12.cpp  day13.cpp  day17.cpp  day18.cpp  day22.py  day23.py  day24.py  day25.py  day4.cpp  day9.cpp  star12.cpp  star13.cpp  star5.cpp  star6.cpp
2017/include/: rbuf.h
2018/src/: day1.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day18.py  day19.py  day2.py  day3.py  (+8 more)
2019/src/day7/: Cargo.toml  intcomp.rs  main.rs
2021/day24/: Cargo.toml  main.rs  out2  output
data/: testfile
finished/: day14.cpp  day16.cpp  day20.py  day21.py  star16.cpp
include/: helper.h  rbuf.h
(+174 files in other folders)
