[package]
name = "day4"
version = "0.1.0"
authors = ["Lucifer <lucifer.hemp@fau.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-crypto="*"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[[bin]]
name = "day4"
path = "main.rs"
