[package]
name = "day24"
version = "0.1.0"
authors = ["Lucifer <lucifer.hemp@fau.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools="*"
strum="*"
strum_macros="*"

[[bin]]
name = "day24"
path = "main.rs"
